--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,9 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-webflux')
     runtime('org.springframework.boot:spring-boot-devtools')
     runtime('org.hsqldb:hsqldb')
+    // https://stackoverflow.com/questions/46991022/junit-5-java-9-and-gradle-how-to-pass-add-modules
+    runtime('org.glassfish.jaxb:jaxb-runtime:2.3.0')
+    runtime('javax.activation:activation:1.1.1')
     compileOnly('org.projectlombok:lombok')
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
