--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,10 @@
 ---
 
 server.port: 8090
+
+spring:
+  data:
+    cassandra:
+      contact-points: 192.168.64.2
+      keyspace-name: showcase
+      schema-action: recreate_drop_unused
