Creates tests to cover Spring Data repository
  + Change Cassandra PK from Long to UUID

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,3 +8,5 @@ spring:
       contact-points: 192.168.64.2
       keyspace-name: showcase
       schema-action: recreate_drop_unused
+  jackson:
+    property-naming-strategy: SNAKE_CASE
